# HDR-Display

./: CMakeLists.txt  README.txt
src/: display_response.h  hdr_display.h  image.cpp  image.h  image_io.cpp  image_io.h  input_parser.cpp  input_parser.h  main.cpp  psf.h
